--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
                     </ul>
                 </div>
                 </li>
-                <li><a href="#"> Smh </a></li>
                 <li><a href="#"> Contact </a>
                     <div class="submenu">
                         <ul>
@@ -71,13 +70,13 @@
             </ul>
         </div>
 
-        <!-- Body 1 -->
-        <div class="slikaDiv pozadina slikaBg1">
 
+        <!-- Body 1 -->
+        <div class="slikaDiv pozadina slikaBg1" style="background-size: cover;">
             <div class="drzacDiv" style="height: 40vh;">
-                <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
-                    <h2 class=" bojat2"> Digitalize your business </h2>
-                    <h2 class=" bojat2"> to reach wider audience </h2>
+                <div class="kutija">
+                    <h2 class=""> Digitalize your business </h2>
+                    <h2 class=""> to reach wider audience </h2>
                 </div>
                 <!--Dodati sliku-->
             </div>
@@ -85,7 +84,7 @@
             </div>
         </div>
 
-        <!-- Body 2 -->
+        <!-- Body 3 -->
         <div class="slikaDiv pozadina slika11">
             
             <div class="" style="height: 100vh;"></div>
@@ -110,11 +109,11 @@
             <div class="footerInfo">
                 <h3>Social</h3>
                 <img src="slike/ikonice/linkedin.png" class="ikona">
-                <h4><a href="https://www.linkedin.com/in/nikolakotarenov" class="footerLink bojat1">Digitalize marketing agency</a></h4>
+                <h4><a href="https://www.linkedin.com/in/nikolakotarenov" class="footerLink bojat2">Digitalize marketing agency</a></h4>
                 <img src="slike/ikonice/instagram.png" class="ikona">  
-                <h4><a href="https://www.instagram.com/cojstvocorporation/" class="footerLink bojat1">@digitalize</a></h4>
+                <h4><a href="https://www.instagram.com/cojstvocorporation/" class="footerLink bojat2">@digitalize</a></h4>
                 <img src="slike/ikonice/twitter.png" class="ikona">  
-                <h4><a href="https://www.twitter.com" class="footerLink bojat1">@digitalize</a></h4>
+                <h4><a href="https://www.twitter.com" class="footerLink bojat2">@digitalize</a></h4>
             </div>
             <div class="madeBy">
                 <a href="about.html"><img src="slike/ikonice/#" class="ikona" style="float: right; height: 60px;"></a>
