--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
         </div>
 
         <!-- Body 3 -->
-        <div class="slikaDiv pozadina slika11">
-            <div class="" style="height: 100vh;"></div>
+        <div class="slikaDiv slikaBg2" style="background-size: cover;">
+            <div class="" style="height: 100vh;">
+                <div class="slika1" style="height: 50%; width: 54%;"></div>
+            </div>
         </div>
 		
         <!-- Body 3 -->
