--- a/index-srpski.html
+++ b/index-srpski.html
@@ -16,6 +16,7 @@
                 <li style="margin: 0; padding: 0;"><a href="index.html"><img src="slike/logo-net.png" style="height: 7.5vh;"></a>
                     <div class="submenu" style="margin-top: 0;">
                         <ul style="">
+                            <li style="text-align: left;"><a href="about.html">O nama</a></li>
                             <li style="text-align: left;"><a href="about.html">About</a></li>
                             <li style="text-align: left;"><a href="portfolio.html">Portfolio</a></li>
                         </ul>
@@ -31,33 +32,33 @@
         <!-- Menustrip -->
         <div class="menustrip boja1">
             <ul>
-                <li><a href="#"> Services </a>
+                <li><a href="#"> Usluge </a>
                 <div class="submenu">
                     <ul>
-                    <li class="hoverme"><a href="#"> Online</a>
+                    <li class="hoverme"><a href="#"> Online </a>
                         <div class="submenu1">
                             <ul>
-                            <li><a href="#">Website development</a></li>
-                            <li><a href="#">Social media management</a></li>
-                            <li><a href="#">Logo, banner and menu design</a></li>
-                            <li><a href="#">Visit card design and printing</a></li>
+                            <li><a href="#">Pravljenje vebsajtova</a></li>
+                            <li><a href="#">Upravljanje drustvenim mrezama</a></li>
+                            <li><a href="#">Dizajn logoa, zastava i cenovnika</a></li>
+                            <li><a href="#">Dizajn i stampa vizit kartica</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="hoverme"><a href="#">In person</a>
+                    <li class="hoverme"><a href="#">Uzivo</a>
                         <div class="submenu1">
                             <ul>
-                            <li><a href="#">Photography</a></li>
-                            <li><a href="#">Promotional video filming</a></li>
-                            <li><a href="#">NFC tag setup</a></li>
-                            <li><a href="#">QR code printing</a></li>
+                            <li><a href="#">Fotografisanje lokala</a></li>
+                            <li><a href="#">Snimanje promotivnog videa</a></li>
+                            <li><a href="#">Postavljanje NFC tagova</a></li>
+                            <li><a href="#">Stampanje QR kodova</a></li>
                             </ul>
                         </div>
                     </li>
                     </ul>
                 </div>
                 </li>
-                <li><a href="#"> Contact </a>
+                <li><a href="#"> Kontakt </a>
                     <div class="submenu">
                         <ul>
                             <li class="hoverme"> <img src="slike/ikonice/linkedin.png" class="ikona"><a href="#">Linkedin</a></li>
@@ -69,11 +70,11 @@
                 </li>
             </ul>
             <ul style="float: right;">
-                <li><a href="#">Language</a>
+                <li><a href="#">Jezik</a>
                     <div class="submenu" style="position: absolute; right: 15px;">
                         <ul>
-                            <li class="hoverme"> <img src="slike/ikonice/united-kingdom.png" class="ikona" style="height: 26px;"><a href="index.html">English</a></li>
-                            <li class="hoverme"> <img src="slike/ikonice/serbia.png" class="ikona" style="height: 26px;"><a href="index-srpski.html">Serbian</a></li>
+                            <li class="hoverme"> <img src="slike/ikonice/united-kingdom.png" class="ikona" style="height: 26px;"><a href="index.html">Engleski</a></li>
+                            <li class="hoverme"> <img src="slike/ikonice/serbia.png" class="ikona" style="height: 26px;"><a href="index-srpski.html">Srpski</a></li>
                         </ul>
                     </div>
                 </li>
@@ -85,8 +86,8 @@
         <div class="slikaDiv pozadina slikaBg1" style="background-size: cover;">
             <div class="drzacDiv" style="height: 40vh;">
                 <div class="kutija">
-                    <h2 class=""> Digitalize your business </h2>
-                    <h2 class=""> to reach wider audience </h2>
+                    <h2 class=""> Digitalizuj svoj biznis </h2>
+                    <h2 class=""> da bi dopreo do sire publike </h2>
                 </div>
                 <!--Dodati sliku-->
             </div>
@@ -111,14 +112,14 @@
         <!-- Footer -->
         <div class="footer boja1" style="height: auto;">
             <div class="footerInfo">
-                <h3>Contact</h3>
+                <h3>Kontakt</h3>
                 <img src="slike/ikonice/phone-white.png" class="ikona"> 
                 <h4>+381-60-7166666</h4>
                 <img src="slike/ikonice/phone-white.png" class="ikona"> 
                 <h4>+381-60-7166666</h4>
             </div>
             <div class="footerInfo">
-                <h3>Social</h3>
+                <h3>Drustvene mreze</h3>
                 <img src="slike/ikonice/linkedin.png" class="ikona">
                 <h4><a href="https://www.linkedin.com/in/nikolakotarenov" class="footerLink bojat2">Digitalize marketing agency</a></h4>
                 <img src="slike/ikonice/instagram.png" class="ikona">  
