jos ikonica i redesing

--- a/index-srpski.html
+++ b/index-srpski.html
@@ -13,11 +13,10 @@
         <!-- Effects -->
         <div class="logo menustrip" style="height: 7.5vh; width: auto; border-bottom: none;">
             <ul style="float: left; height: 7.5vh; margin: 0; padding: 0;">
-                <li style="margin: 0; padding: 0;"><a href="index.html"><img src="slike/logo-net.png" style="height: 7.5vh;"></a>
+                <li style="margin: 0; padding: 0;"><a href="index-srpski.html"><img src="slike/logo-net.png" style="height: 7.5vh;"></a>
                     <div class="submenu" style="margin-top: 0;">
                         <ul style="">
                             <li style="text-align: left;"><a href="about.html">O nama</a></li>
-                            <li style="text-align: left;"><a href="about.html">About</a></li>
                             <li style="text-align: left;"><a href="portfolio.html">Portfolio</a></li>
                         </ul>
                     </div>
@@ -35,30 +34,30 @@
                 <li><a href="#"> Usluge </a>
                 <div class="submenu">
                     <ul>
-                    <li class="hoverme"><a href="#"> Online </a>
+                    <li class="hoverme"><a href="#"> Online</a>
                         <div class="submenu1">
                             <ul>
-                            <li><a href="#">Pravljenje vebsajtova</a></li>
-                            <li><a href="#">Upravljanje drustvenim mrezama</a></li>
-                            <li><a href="#">Dizajn logoa, zastava i cenovnika</a></li>
-                            <li><a href="#">Dizajn i stampa vizit kartica</a></li>
+                            <li> <img src="slike/ikonice/website2.png" class="ikona" style="height: 42px;"> <a href="#">Dizajn websajta</a></li>
+                            <li> <img src="slike/ikonice/social-media.png" class="ikona" style="height: 44px;"> <a href="#">Drustvene mreze</a></li>
+                            <li> <img src="slike/ikonice/photoshop.png" class="ikona" style="height: 40px;"> <a href="#">Digitalni dizajn</a></li>
+                            <li> <img src="slike/ikonice/visiting-card.png" class="ikona" style="height: 42px;"> <a href="#">Dizajn vizit katrti</a></li>
                             </ul>
                         </div>
                     </li>
-                    <li class="hoverme"><a href="#">Uzivo</a>
+                    <li class="hoverme"><a href="#">In person</a>
                         <div class="submenu1">
                             <ul>
-                            <li><a href="#">Fotografisanje lokala</a></li>
-                            <li><a href="#">Snimanje promotivnog videa</a></li>
-                            <li><a href="#">Postavljanje NFC tagova</a></li>
-                            <li><a href="#">Stampanje QR kodova</a></li>
+                            <li> <img src="slike/ikonice/camera.png" class="ikona" style="height: 42px;"> <a href="#">Foto shooting</a> </li>
+                            <li> <img src="slike/ikonice/video-camera.png" class="ikona" style="height: 42px;"> <a href="#">Snimanje videa</a> </li>
+                            <li> <img src="slike/ikonice/nfc-logo.png" class="ikona" style="height: 42px;"> <a href="#"> Postavka NFC taga</a></li>
+                            <li> <img src="slike/ikonice/qr-printing.png" class="ikona" style="height: 42px;"> <a href="#"> Stampa QR koda</a></li>
                             </ul>
                         </div>
                     </li>
                     </ul>
                 </div>
                 </li>
-                <li><a href="#"> Kontakt </a>
+                <li><a href="#"> Contact </a>
                     <div class="submenu">
                         <ul>
                             <li class="hoverme"> <img src="slike/ikonice/linkedin.png" class="ikona"><a href="#">Linkedin</a></li>
@@ -70,11 +69,11 @@
                 </li>
             </ul>
             <ul style="float: right;">
-                <li><a href="#">Jezik</a>
+                <li><a href="#">Language</a>
                     <div class="submenu" style="position: absolute; right: 15px;">
                         <ul>
-                            <li class="hoverme"> <img src="slike/ikonice/united-kingdom.png" class="ikona" style="height: 26px;"><a href="index.html">Engleski</a></li>
-                            <li class="hoverme"> <img src="slike/ikonice/serbia.png" class="ikona" style="height: 26px;"><a href="index-srpski.html">Srpski</a></li>
+                            <li class="hoverme"> <img src="slike/ikonice/united-kingdom.png" class="ikona" style="height: 26px;"><a href="index.html">English</a></li>
+                            <li class="hoverme"> <img src="slike/ikonice/serbia.png" class="ikona" style="height: 26px;"><a href="index-srpski.html">Serbian</a></li>
                         </ul>
                     </div>
                 </li>
@@ -86,8 +85,8 @@
         <div class="slikaDiv pozadina slikaBg1" style="background-size: cover;">
             <div class="drzacDiv" style="height: 40vh;">
                 <div class="kutija">
-                    <h2 class=""> Digitalizuj svoj biznis </h2>
-                    <h2 class=""> da bi dopreo do sire publike </h2>
+                    <h2 class=""> Digitalize your business </h2>
+                    <h2 class=""> to reach wider audience </h2>
                 </div>
                 <!--Dodati sliku-->
             </div>
@@ -112,14 +111,14 @@
         <!-- Footer -->
         <div class="footer boja1" style="height: auto;">
             <div class="footerInfo">
-                <h3>Kontakt</h3>
+                <h3>Contact</h3>
                 <img src="slike/ikonice/phone-white.png" class="ikona"> 
                 <h4>+381-60-7166666</h4>
                 <img src="slike/ikonice/phone-white.png" class="ikona"> 
                 <h4>+381-60-7166666</h4>
             </div>
             <div class="footerInfo">
-                <h3>Drustvene mreze</h3>
+                <h3>Social</h3>
                 <img src="slike/ikonice/linkedin.png" class="ikona">
                 <h4><a href="https://www.linkedin.com/in/nikolakotarenov" class="footerLink bojat2">Digitalize marketing agency</a></h4>
                 <img src="slike/ikonice/instagram.png" class="ikona">  
