--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
                     <li class="hoverme"><a href="#"> Online</a>
                         <div class="submenu1">
                             <ul>
-                            <li><a href="#">Website development</a></li>
-                            <li><a href="#">Social media management</a></li>
-                            <li><a href="#">Logo, banner and menu design</a></li>
-                            <li><a href="#">Visit card design and printing</a></li>
+                            <li> <img src="slike/ikonice/website2.png" class="ikona" style="height: 42px;"> <a href="#">Website design</a></li>
+                            <li> <img src="slike/ikonice/social-media.png" class="ikona" style="height: 44px;"> <a href="#">Social media</a></li>
+                            <li> <img src="slike/ikonice/photoshop.png" class="ikona" style="height: 40px;"> <a href="#">Digital design</a></li>
+                            <li> <img src="slike/ikonice/visiting-card.png" class="ikona" style="height: 42px;"> <a href="#">Visit card design</a></li>
                             </ul>
                         </div>
                     </li>
                     <li class="hoverme"><a href="#">In person</a>
                         <div class="submenu1">
                             <ul>
-                            <li><a href="#">Photography</a></li>
-                            <li><a href="#">Promotional video filming</a></li>
-                            <li><a href="#">NFC tag setup</a></li>
-                            <li><a href="#">QR code printing</a></li>
+                            <li> <img src="slike/ikonice/camera.png" class="ikona" style="height: 42px;"> <a href="#">Photo shooting</a> </li>
+                            <li> <img src="slike/ikonice/video-camera.png" class="ikona" style="height: 42px;"> <a href="#">Video filming</a> </li>
+                            <li> <img src="slike/ikonice/nfc-logo.png" class="ikona" style="height: 42px;"> <a href="#">NFC tag setup</a></li>
+                            <li> <img src="slike/ikonice/qr-printing.png" class="ikona" style="height: 42px;"> <a href="#">QR code printing</a></li>
                             </ul>
                         </div>
                     </li>
