--- a/index-srpski.html
+++ b/index-srpski.html
@@ -85,8 +85,8 @@
         <div class="slikaDiv pozadina slikaBg1" style="background-size: cover;">
             <div class="drzacDiv" style="height: 40vh;">
                 <div class="kutija">
-                    <h2 class=""> Digitalize your business </h2>
-                    <h2 class=""> to reach wider audience </h2>
+                    <h2 class=""> Digitalizujte Vas biznis </h2>
+                    <h2 class=""> da biste dopreli do sire publike </h2>
                 </div>
                 <!--Dodati sliku-->
             </div>
