--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-        <script type="text/javascript" src="script.js"> </script>  
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Digitalize </title>
     </head>
 
@@ -85,8 +84,7 @@
         <div class="slikaDiv pozadina slikaBg1" style="background-size: cover;">
             <div class="drzacDiv" style="height: 40vh;">
                 <div class="kutija">
-                    <h2 class=""> Digitalize your business </h2>
-                    <h2 class=""> to reach wider audience </h2>
+                    <h2 data-value="Digitalize your business to reach wider audience"> Digitalize your business <br> to reach wider audience </h2>
                 </div>
                 <!--Dodati sliku-->
             </div>
@@ -95,10 +93,28 @@
         </div>
 
         <!-- Body 3 -->
-        <div class="slikaDiv slikaBg2" style="background-size: cover;">
-            <div class="" style="height: 100vh;">
-                <div class="slika1" style="height: 50%; width: 54%;"></div>
+        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 15%);">
+            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
+                <h2 style="color: #0066CC;" class=""> Digitalize your business <br> to reach wider audience </h2>
             </div>
+            <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
+            <img src="slike/stock/stonks.png" class="slikaElement"> 
+        </div>
+        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 25%);">
+            <img src="slike/stock/qr-code2.avif" class="slikaElement"> 
+            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
+                <h2 style="color: #0066CC;"> Digitalize your business </h2>
+                <h2 style="color: #0066CC;"> to reach wider audience </h2>
+            </div>
+        </div>
+        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 15%);">
+            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
+                <h2 style="color: #0066CC;"> Digitalize your business </h2>
+                <h2 style="color: #0066CC;"> to reach wider audience </h2>
+            </div>
+            <img src="slike/stock/stonks.png" class="slikaElement"> 
+        </div>
+        <div class="" style="height: 80vh;">
         </div>
 		
         <!-- Body 3 -->
@@ -132,5 +148,6 @@
             </div>
         </div>
     </div>
+    <!-- <script type="text/javascript" src="script.js"> </script>   -->   
     </body>
 </html>
