--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="slikaDiv pozadina slikaBg1" style="background-size: cover;">
             <div class="drzacDiv" style="height: 40vh;">
                 <div class="kutija">
-                    <h2 data-value="Digitalize your business to reach wider audience"> Digitalize your business <br> to reach wider audience </h2>
+                    <h2 data-value="Digitalize your business to reach wider audience" class="top-to-bottom"> Digitalize your business <br> to reach wider audience </h2>
                 </div>
                 <!--Dodati sliku-->
             </div>
@@ -93,30 +93,42 @@
         </div>
 
         <!-- Body 3 -->
-        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 15%);">
-            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
-                <h2 style="color: #0066CC;" class=""> Digitalize your business <br> to reach wider audience </h2>
-            </div>
-            <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
-            <img src="slike/stock/stonks.png" class="slikaElement"> 
-        </div>
         <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 25%);">
+            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
+                <h2 style="color: #0066CC;"> Promotional content </h2>
+                <h3 style="color: #0080ff;"> Promotional video and image shooting... </h3>
+                <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
+            </div>
+            <img src="slike/stock/table.png" class="slikaElement"> 
+        </div>
+        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 15%);">
             <img src="slike/stock/qr-code2.avif" class="slikaElement"> 
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
-                <h2 style="color: #0066CC;"> Digitalize your business </h2>
-                <h2 style="color: #0066CC;"> to reach wider audience </h2>
+                <h2 style="color: #0066CC;"> QR code printing </h2>
+                <h3 style="color: #0080ff;"> QR code printing... </h3>
+                <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
             </div>
         </div>
-        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 15%);">
+        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 0%);">
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
-                <h2 style="color: #0066CC;"> Digitalize your business </h2>
-                <h2 style="color: #0066CC;"> to reach wider audience </h2>
+                <h2 style="color: #0066CC;"> NFC tag setup </h2>
+                <h3 style="color: #0080ff;"> NFC tag coding and setup... </h3>
+                <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
             </div>
+            <img src="slike/stock/nfc-phone2.jpg" class="slikaElement"> 
+        </div>
+        </div>
+		<div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 15%);">
             <img src="slike/stock/stonks.png" class="slikaElement"> 
+            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
+                <h2 style="color: #0066CC;"> Visit card design </h2>
+                <h3 style="color: #0080ff;"> Visit card design and printing...</h3>
+                <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
+            </div>
         </div>
+
         <div class="" style="height: 80vh;">
-        </div>
-		
+
         <!-- Body 3 -->
 		<div class="slikaDiv pozadina slika3">
             
