--- a/index.html
+++ b/index.html
@@ -93,36 +93,36 @@
         </div>
 
         <!-- Body 3 -->
-        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 25%);">
+        <div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to left, white, white, rgb(122, 172, 159));">
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
                 <h2 style="color: #0066CC;"> Promotional content </h2>
-                <h3 style="color: #0080ff;"> Promotional video and image shooting... </h3>
+                <p style="color: #0080ff;"> Promotional video and image shoot... </p>
                 <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
             </div>
-            <img src="slike/stock/table.png" class="slikaElement"> 
+            <img src="slike/stock/video1.jpg" class="slikaElement"> 
         </div>
-        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 15%);">
+        <div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to right, white, white, rgb(122, 172, 159));">
             <img src="slike/stock/qr-code2.avif" class="slikaElement"> 
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
                 <h2 style="color: #0066CC;"> QR code printing </h2>
-                <h3 style="color: #0080ff;"> QR code printing... </h3>
+                <p style="color: #0080ff;"> We print QR codes for accessing menus, wifi </p>
                 <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
             </div>
         </div>
-        <div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 0%);">
+        <div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to left, white, white, rgb(122, 172, 159));">
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
                 <h2 style="color: #0066CC;"> NFC tag setup </h2>
-                <h3 style="color: #0080ff;"> NFC tag coding and setup... </h3>
+                <p style="color: #0080ff;"> NFC tag coding and setup... </p>
                 <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
             </div>
             <img src="slike/stock/nfc-phone2.jpg" class="slikaElement"> 
         </div>
         </div>
-		<div class="drzacDiv" style="height: 50vh; background-color: rgb(0,0,0, 15%);">
-            <img src="slike/stock/stonks.png" class="slikaElement"> 
+		<div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to right, #efefef, #efefef, rgb(122, 172, 159));">
+            <img src="slike/stock/card2.jpg" class="slikaElement" style="height: 60%;"> 
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
                 <h2 style="color: #0066CC;"> Visit card design </h2>
-                <h3 style="color: #0080ff;"> Visit card design and printing...</h3>
+                <p style="color: #0080ff;"> Visit card design and printing...</p>
                 <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
             </div>
         </div>
