--- a/plans.html
+++ b/plans.html
@@ -15,8 +15,7 @@
                 <li style="margin: 0; padding: 0;"><a href="index.html"><img src="slike/logo-net.png" style="height: 7.5vh;"></a>
                     <div class="submenu" style="margin-top: 0;">
                         <ul>
-                            <li style="text-align: left;"><a href="plans.html">Plans</a></li>
-                            <li style="text-align: left;"><a href="about.html">About us</a></li>
+                            <li style="text-align: left;"><a href="about.html">About</a></li>
                             <li style="text-align: left;"><a href="portfolio.html">Portfolio</a></li>
                         </ul>
                     </div>
@@ -89,78 +88,47 @@
                 </div>
                 <!--Dodati sliku-->
             </div>
-            <div class="" style="height: 800px;">
+            <div class="" style="height: 80vh;">
             </div>
         </div>
 
-        <!-- Body 3 -->
-        <div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to left, white, white, rgb(122, 172, 159));">
-            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
-                <h2 style="color: #0066CC;"> Promotional content </h2>
-                <p style="color: #0080ff;"> Promotional video and image shoot... </p>
-                <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more </button>
+        <div class="drzacDiv" style="height: 80vh; background-image: linear-gradient(rgb(122, 172, 159), rgb(199, 224, 238));">
+            <div class="card" style="height: 80%; margin: 1%;">
+                <div class="card-content">
+                    <h3 class="card-title">Website design</h3>
+                    <h4 class="card-subtitle"></h4>
+                </div>
+                <i class="fa-solid fa-hat-witch card-icon"></i>
             </div>
-            <img src="slike/stock/video1.jpg" class="slikaElement"> 
-        </div>
-        <div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to right, white, white, rgb(122, 172, 159));">
-            <img src="slike/stock/qr-code2.avif" class="slikaElement"> 
-            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
-                <h2 style="color: #0066CC;"> QR code printing </h2>
-                <p style="color: #0080ff;"> We print QR codes for accessing different web pages, wi-fi etc. </p>
-                <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> Order now </button>
-            </div>
-        </div>
-        <div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to left, white, white, rgb(122, 172, 159));">
-            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
-                <h2 style="color: #0066CC;"> NFC tag setup </h2>
-                <p style="color: #0080ff;"> Easier and quicker path than scanning QR codes. </p>
-                <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See all options </button>
-            </div>
-            <img src="slike/stock/nfc-phone2.jpg" class="slikaElement"> 
-        </div>
-        </div>
-		<div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to right, #efefef, #efefef, rgb(122, 172, 159));">
-            <img src="slike/stock/card2.jpg" class="slikaElement" style="height: 55%;"> 
-            <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
-                <h2 style="color: #0066CC;"> Visit card design </h2>
-                <p style="color: #0080ff;"> We design unique visit cards that can include NFC tags.</p>
-                <button class="plavoDugme" onclick="window.location.href='index-srpski.html'"> See more designs </button>
-            </div>
-        </div>
 
+            <div class="card" style="height: 80%; margin: 1%;">
+                <div class="card-content">
+                    <h3 class="card-title">Digital design</h3>
+                    <h4 class="card-subtitle"></h4>
+                </div>
+                <i class="fa-solid fa-hat-witch card-icon"></i>
+            </div>
+            <div class="card" style="height: 80%; margin: 1%;">
+                <div class="card-content">
+                    <h3 class="card-title">Social media management</h3>
+                    <h4 class="card-subtitle"></h4>
+                </div>
+                <i class="fa-solid fa-hat-witch card-icon"></i>
+            </div>
+        </div>
+        <div class="drzacDiv" style="height: 80vh; background-image: linear-gradient(to top, rgb(122, 172, 159), rgb(199, 224, 238));">
+            <div class="card" style="height: 80%; margin: 1%;">
+                <div class="card-content">
+                    <h3 class="card-title">Digitalization</h3>
+                    <h4 class="card-subtitle"></h4>
+                </div>
+                <i class="fa-solid fa-hat-witch card-icon"></i>
+            </div>
+        </div>
         <div class="" style="height: 80vh;">
-
-        <!-- Body 3 -->
-		<div class="slikaDiv pozadina slika3">
-            
-            <div class="" style="height: 100vh;">
-            </div>
-        
-
-        <!-- Footer -->
-        <div class="footer boja1" style="height: auto;">
-            <div class="footerInfo">
-                <h3>Contact</h3>
-                <img src="slike/ikonice/phone-white.png" class="ikona"> 
-                <h4>+381-60-7166666</h4>
-                <img src="slike/ikonice/phone-white.png" class="ikona"> 
-                <h4>+381-60-7166666</h4>
-            </div>
-            <div class="footerInfo">
-                <h3>Social</h3>
-                <img src="slike/ikonice/linkedin.png" class="ikona">
-                <h4><a href="https://www.linkedin.com/in/nikolakotarenov" class="footerLink bojat2">Digitalize marketing agency</a></h4>
-                <img src="slike/ikonice/instagram.png" class="ikona">  
-                <h4><a href="https://www.instagram.com/cojstvocorporation/" class="footerLink bojat2">@digitalize</a></h4>
-                <img src="slike/ikonice/twitter.png" class="ikona">  
-                <h4><a href="https://www.twitter.com" class="footerLink bojat2">@digitalize</a></h4>
-            </div>
-            <div class="madeBy">
-                <a href="about.html"><img src="slike/ikonice/#" class="ikona" style="float: right; height: 60px;"></a>
-                <a href="about.html"><img src="slike/ikonice/signature-white-nobg.png" class="ikona" style="float: right; height: 60px;"></a>
-            </div>
         </div>
-    </div>
+
+        <script type="text/javascript" src="script2.js"> </script>
     <!-- <script type="text/javascript" src="script.js"> </script>   -->   
     </body>
 </html>
