--- a/plans.html
+++ b/plans.html
@@ -15,6 +15,7 @@
                 <li style="margin: 0; padding: 0;"><a href="index.html"><img src="slike/logo-net.png" style="height: 7.5vh;"></a>
                     <div class="submenu" style="margin-top: 0;">
                         <ul>
+                            <li style="text-align: left;"><a href="plans.html">Plans</a></li>
                             <li style="text-align: left;"><a href="about.html">About</a></li>
                             <li style="text-align: left;"><a href="portfolio.html">Portfolio</a></li>
                         </ul>
