--- a/plans.html
+++ b/plans.html
@@ -81,20 +81,10 @@
         </div>
 
 
+    
         <!-- Body 1 -->
-        <div class="slikaDiv pozadina slikaBg1" style="background-size: cover;">
-            <div class="drzacDiv" style="height: 40vh;">
-                <div class="kutija">
-                    <h2 data-value="Digitalize your business to reach wider audience" class="top-to-bottom"> Digitalize your business <br> to reach wider audience </h2>
-                </div>
-                <!--Dodati sliku-->
-            </div>
-            <div class="" style="height: 80vh;">
-            </div>
-        </div>
-
-        <div class="drzacDiv" style="height: 80vh; background-image: linear-gradient(rgb(122, 172, 159), rgb(199, 224, 238));">
-            <div class="card" style="height: 80%; margin: 1%;">
+        <div class="drzacDiv pozadina" style="height: 100vh; background-image: linear-gradient(to bottom, rgb(122, 172, 159), rgb(199, 224, 238));">
+            <div class="card" style="height: 70%; margin: 1%;">
                 <div class="card-content">
                     <h3 class="card-title">Website design</h3>
                     <h4 class="card-subtitle"></h4>
@@ -102,23 +92,23 @@
                 <i class="fa-solid fa-hat-witch card-icon"></i>
             </div>
 
-            <div class="card" style="height: 80%; margin: 1%;">
+            <div class="card" style="height: 70%; margin: 1%;">
                 <div class="card-content">
                     <h3 class="card-title">Digital design</h3>
                     <h4 class="card-subtitle"></h4>
                 </div>
                 <i class="fa-solid fa-hat-witch card-icon"></i>
             </div>
-            <div class="card" style="height: 80%; margin: 1%;">
+            <div class="card" style="height: 70%; margin: 1%;">
                 <div class="card-content">
-                    <h3 class="card-title">Social media management</h3>
+                    <h3 class="card-title">Social media</h3>
                     <h4 class="card-subtitle"></h4>
                 </div>
                 <i class="fa-solid fa-hat-witch card-icon"></i>
             </div>
         </div>
-        <div class="drzacDiv" style="height: 80vh; background-image: linear-gradient(to top, rgb(122, 172, 159), rgb(199, 224, 238));">
-            <div class="card" style="height: 80%; margin: 1%;">
+        <div class="drzacDiv pozadina" style="height: 100vh; background-image: linear-gradient(to top, rgb(122, 172, 159), rgb(199, 224, 238));">
+            <div class="card" style="height: 70%; margin: 1%;">
                 <div class="card-content">
                     <h3 class="card-title">Digitalization</h3>
                     <h4 class="card-subtitle"></h4>
@@ -128,7 +118,6 @@
         </div>
         <div class="" style="height: 80vh;">
         </div>
-
         <script type="text/javascript" src="script2.js"> </script>
     <!-- <script type="text/javascript" src="script.js"> </script>   -->   
     </body>
