--- a/plans.html
+++ b/plans.html
@@ -79,10 +79,9 @@
                 </li>
             </ul>
         </div>
-
-
     
         <!-- Body 1 -->
+        <!-- Da bi uklonio transition izbrisi klasu pozadina -->
         <div class="drzacDiv pozadina" style="height: 100vh; background-image: linear-gradient(to bottom, rgb(122, 172, 159), rgb(199, 224, 238));">
             <div class="card" style="height: 70%; margin: 1%;">
                 <div class="card-content">
@@ -107,10 +106,15 @@
                 <i class="fa-solid fa-hat-witch card-icon"></i>
             </div>
         </div>
+        <!-- Da bi uklonio transition izbrisi klasu pozadina -->
         <div class="drzacDiv pozadina" style="height: 100vh; background-image: linear-gradient(to top, rgb(122, 172, 159), rgb(199, 224, 238));">
             <div class="card" style="height: 70%; margin: 1%;">
                 <div class="card-content">
-                    <h3 class="card-title">Digitalization</h3>
+                    <h3 class="card-title">
+                        <span class="magic">
+                        <span class="magic-text">Digitalization</span>
+                        </span>
+                    </h3>
                     <h4 class="card-subtitle"></h4>
                 </div>
                 <i class="fa-solid fa-hat-witch card-icon"></i>
@@ -118,7 +122,9 @@
         </div>
         <div class="" style="height: 80vh;">
         </div>
-        <script type="text/javascript" src="script2.js"> </script>
+        <script type="text/javascript" src="scriptCard.js"> </script>
+        <!-- <script type="text/javascript" src="scriptZvezdice.js"> </script> -->  
+        
     <!-- <script type="text/javascript" src="script.js"> </script>   -->   
     </body>
 </html>
