--- a/plans.html
+++ b/plans.html
@@ -85,7 +85,7 @@
         <div class="drzacDiv pozadina" style="height: 100vh; background-image: linear-gradient(to bottom, rgb(122, 172, 159), rgb(199, 224, 238));">
             <div class="card" style="height: 70%; margin: 1%;">
                 <div class="card-content">
-                    <h3 class="card-title">Website design</h3>
+                    <h3 class="card-title">Website development</h3>
                     <h4 class="card-subtitle"></h4>
                 </div>
                 <i class="fa-solid fa-hat-witch card-icon"></i>
