script za produzetak diva

--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
                 <h2 style="color: #0066CC;"> NFC tag setup </h2>
                 <p style="color: #0080ff;"> Easier and quicker path than scanning QR codes. </p>
-                <button class="plavoDugme" onclick="window.location.href='plans.html'"> See all options </button>
+                <button class="plavoDugme" onclick="produzetak()"> See all options </button>
             </div>
         </div>
         <div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to left, white, white, rgb(122, 172, 159));">
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
                 <h2 style="color: #0066CC;"> QR code printing </h2>
                 <p style="color: #0080ff;"> We print QR codes for accessing different web pages, wi-fi etc. </p>
-                <button class="plavoDugme" onclick="window.location.href='plans.html'"> Order now </button>
+                <button class="plavoDugme" onclick="produzetak()"> Order now </button>
             </div>
             <img src="slike/stock/qr-code2.avif" class="slikaElement"> 
         </div>
@@ -115,14 +115,14 @@
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
                 <h2 style="color: #0066CC;"> Visit card design </h2>
                 <p style="color: #0080ff;"> We design unique visit cards that can include NFC tags.</p>
-                <button class="plavoDugme" onclick="window.location.href='plans.html'"> See more designs </button>
+                <button class="plavoDugme" onclick="produzetak()"> See more designs </button>
             </div>
         </div>
         <div class="drzacDiv" style="height: 50vh; background-image: linear-gradient(to left, white, white, rgb(122, 172, 159));">
             <div style="height: 100%; width: 40%; padding-top: 10%; padding-bottom: 10%;">
                 <h2 style="color: #0066CC;"> Promotional content </h2>
                 <p style="color: #0080ff;"> Promotional video and image shoot... </p>
-                <button class="plavoDugme" onclick="window.location.href='plans.html'"> See more </button>
+                <button class="plavoDugme" onclick="produzetak()"> See more </button>
             </div>
             <img src="slike/stock/video1.jpg" class="slikaElement"> 
         </div>
@@ -160,6 +160,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="scriptDuziDiv.js"> </script>
     <!-- <script type="text/javascript" src="script.js"> </script>   -->   
     </body>
 </html>
