zamena kontakta iz menija u futer

--- a/index.html
+++ b/index.html
@@ -58,14 +58,6 @@
                 </div>
                 </li>
                 <li><a href="#"> Contact </a>
-                    <div class="submenu">
-                        <ul>
-                            <li class="hoverme"> <img src="slike/ikonice/linkedin.png" class="ikona"><a href="#">Linkedin</a></li>
-                            <li class="hoverme"> <img src="slike/ikonice/instagram.png" class="ikona"><a href="#">Instagram</a></li>
-                            <li class="hoverme"> <img src="slike/ikonice/twitter.png" class="ikona"><a href="#">Twitter</a></li>
-                            <li class="hoverme"> <img src="slike/ikonice/mail-white.png" class="ikona"><a href="#">Email</a></li>
-                        </ul>
-                    </div>
                 </li>
             </ul>
             <ul style="float: right;">
@@ -127,40 +119,54 @@
             <img src="slike/stock/video1.jpg" class="slikaElement"> 
         </div>
 
-        <div class="" style="height: 80vh;">
-
         <!-- Body 3 -->
 		<div class="slikaDiv pozadina slika3">
             
-            <div class="" style="height: 100vh;">
+            <div class="" style="height: 50vh;">
             </div>
         
 
         <!-- Footer -->
         <div class="footer boja1" style="height: auto;">
             <div class="footerInfo">
-                <h3>Contact</h3>
+                <h3>
+                    <span class="magic">
+                    <span class="magic-text">Contact</span>
+                    </span>
+                </h3>
                 <img src="slike/ikonice/phone-white.png" class="ikona"> 
                 <h4>+381-60-7166666</h4>
                 <img src="slike/ikonice/phone-white.png" class="ikona"> 
                 <h4>+381-60-7166666</h4>
+                <img src="slike/ikonice/mail-white.png" class="ikona">  
+                <h4>digitalize@gmail.com</a></h4>
             </div>
             <div class="footerInfo">
-                <h3>Social</h3>
+                <h3><span class="magic">
+                    <span class="magic-star">
+                      <svg viewBox="0 0 512 512">
+                      <path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" />
+                      </svg>
+                    </span>
+                    <span class="magic-star">
+                      <svg viewBox="0 0 512 512">
+                      <path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" />
+                      </svg>
+                    </span>
+                    <span class="magic-text">Social</span>
+                  </span></h3>
                 <img src="slike/ikonice/linkedin.png" class="ikona">
                 <h4><a href="https://www.linkedin.com/in/nikolakotarenov" class="footerLink bojat2">Digitalize marketing agency</a></h4>
                 <img src="slike/ikonice/instagram.png" class="ikona">  
                 <h4><a href="https://www.instagram.com/cojstvocorporation/" class="footerLink bojat2">@digitalize</a></h4>
-                <img src="slike/ikonice/twitter.png" class="ikona">  
-                <h4><a href="https://www.twitter.com" class="footerLink bojat2">@digitalize</a></h4>
             </div>
             <div class="madeBy">
-                <a href="about.html"><img src="slike/ikonice/#" class="ikona" style="float: right; height: 60px;"></a>
                 <a href="about.html"><img src="slike/ikonice/signature-white-nobg.png" class="ikona" style="float: right; height: 60px;"></a>
             </div>
         </div>
     </div>
     <script type="text/javascript" src="scriptDuziDiv.js"> </script>
+    <script type="text/javascript" src="scriptZvezdice.js"> </script>
     <!-- <script type="text/javascript" src="script.js"> </script>   -->   
     </body>
 </html>
